# wannagpu

./: README.md  pyproject.toml
src/gpu/: gpudata.py  gpustat2.py  nvidia-sml.py  nvml.py
src/utils/: test_validation.py  validation.py
src/wannagpu/: __init__.py
src/wannagpu/gpu/: __init__.py  gpudata.py  gpustat2.py  nvml.py
src/wannagpu/utils/: network.py
