[tool.poetry]
name = "wannagpu"
version = "0.1.0"
description = "A project that helps you get enough gpu at any time!"
authors = ["Henry-GongZY <watershell@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
regex = "^2023.12.25"
paramiko = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
