[tool.poetry]
name = "wannagpu"
version = "0.1.0"
description = "A project that helps you get enough gpu at any time!"
authors = ["Henry-GongZY <watershell@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
regex = "^2023.12.25"
paramiko = "^3.4.0"
pynvml = "^11.5.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
